Optimizing things: - Adding quad cache to block renderer and putting the occlusion condition before getting up quads - Removing method scope RandomSource and moving it to BuilderResources (per-thread RandomSource) (It was causing huge unnecessary allocations into the heap) - Fixing reallocated ThreadLocals to avoid useless heap allocations - Avoid collector beans rebuild and moving it to an appropriate list